--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>关系图谱前端框架DEMO</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Cache-Control" content="no-cache" />
 	<meta http-equiv="Expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="./static/css/81b246b20abc7df25bfca76966b1565d.style.css" rel="stylesheet"></head>
+<link href="./static/css/b6f8a8e0efe448f4f05756005152935a.style.css" rel="stylesheet"></head>
 <body>
 
 <!--[if lt IE 8]>
@@ -21,5 +21,5 @@
 
 <div id="app"></div>
 
-<script type="text/javascript" src="./static/js/f7b07be47a22d207fc42.vendor.js"></script><script type="text/javascript" src="./static/js/cdc70a4ee5d147b64d77.main.js"></script></body>
+<script type="text/javascript" src="./static/js/1e6cf01cdb02e845c80d.vendor.js"></script><script type="text/javascript" src="./static/js/de93c967bcf76ea1b538.main.js"></script></body>
 </html>
