--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="./static/css/cf66808590d47cb15c46ffcda13877e3.style.css" rel="stylesheet"></head>
+<link href="/static/css/cf66808590d47cb15c46ffcda13877e3.style.css" rel="stylesheet"></head>
 <body>
 
 <!--[if lt IE 8]>
@@ -21,5 +21,5 @@
 
 <div id="app"></div>
 
-<script type="text/javascript" src="./static/js/54db3d748531d0d9a982.vendor.js"></script><script type="text/javascript" src="./static/js/336e5d07d5f24f876b40.main.js"></script></body>
+<script type="text/javascript" src="/static/js/0a54d356ab88716934de.vendor.js"></script><script type="text/javascript" src="/static/js/c321797adac28f0922c7.main.js"></script></body>
 </html>
