--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>关系图谱前端框架DEMO</title>
+    <title>关系图谱框架DEMO</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta http-equiv="Pragma" content="no-cache" />
@@ -10,7 +10,7 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="./static/css/759893dc0675c57e9f3460690817c09f.style.css" rel="stylesheet"></head>
+<link href="/static/css/main.74d152868cacbac9ba95.css" rel="stylesheet"></head>
 <body>
 
 <!--[if lt IE 8]>
@@ -21,5 +21,5 @@
 
 <div id="app"></div>
 
-<script type="text/javascript" src="./static/js/af489d4f6945f584a418.vendor.js"></script><script type="text/javascript" src="./static/js/212da3cf1fc62e2acdc5.main.js"></script></body>
+<script type="text/javascript" src="/static/js/vendor.74d15.chunk.js"></script><script type="text/javascript" src="/static/js/74d152868cacbac9ba95.main.js"></script></body>
 </html>
