--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="/static/css/main.74d152868cacbac9ba95.css" rel="stylesheet"></head>
+<link href="./static/css/main.74d152868cacbac9ba95.css" rel="stylesheet"></head>
 <body>
 
 <!--[if lt IE 8]>
@@ -21,5 +21,5 @@
 
 <div id="app"></div>
 
-<script type="text/javascript" src="/static/js/vendor.74d15.chunk.js"></script><script type="text/javascript" src="/static/js/74d152868cacbac9ba95.main.js"></script></body>
+<script type="text/javascript" src="./static/js/vendor.74d15.chunk.js"></script><script type="text/javascript" src="./static/js/74d152868cacbac9ba95.main.js"></script></body>
 </html>
