--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="./static/css/main.74d152868cacbac9ba95.css" rel="stylesheet"></head>
+<link href="./static/css/main.87b11d22a41e2ab30f85.css" rel="stylesheet"></head>
 <body>
-
-<!--[if lt IE 8]>
-<p class="browse-tips">
-    您正在使用<strong>过时的</strong>浏览器。 请<a href='http://browsehappy.com/'>更新浏览器</a>，以保证良好的用户体验。
-</p>
-<![endif]-->
 
 <div id="app"></div>
 
-<script type="text/javascript" src="./static/js/vendor.74d15.chunk.js"></script><script type="text/javascript" src="./static/js/74d152868cacbac9ba95.main.js"></script></body>
+<script type="text/javascript" src="./static/js/vendor.87b11.chunk.js"></script><script type="text/javascript" src="./static/js/87b11d22a41e2ab30f85.main.js"></script></body>
 </html>
