--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="关系图谱前端框架" />
-<link href="./static/css/main.87b11d22a41e2ab30f85.css" rel="stylesheet"></head>
+<link href="./static/css/main.6ec6be189eaf629fecdb.css" rel="stylesheet"></head>
 <body>
 
 <div id="app"></div>
 
-<script type="text/javascript" src="./static/js/vendor.87b11.chunk.js"></script><script type="text/javascript" src="./static/js/87b11d22a41e2ab30f85.main.js"></script></body>
+<script type="text/javascript" src="./static/js/vendor.6ec6b.chunk.js"></script><script type="text/javascript" src="./static/js/6ec6be189eaf629fecdb.main.js"></script></body>
 </html>
